; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_pcie_trans.c_iwm_enable_rfkill_int.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_pcie_trans.c_iwm_enable_rfkill_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32 }

@IWM_CSR_INT_BIT_RF_KILL = common dso_local global i32 0, align 4
@IWM_CSR_INT_MASK = common dso_local global i32 0, align 4
@IWM_CSR_GP_CNTRL = common dso_local global i32 0, align 4
@IWM_CSR_GP_CNTRL_REG_FLAG_RFKILL_WAKE_L1A_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iwm_enable_rfkill_int(%struct.iwm_softc* %0) #0 {
  %2 = alloca %struct.iwm_softc*, align 8
  store %struct.iwm_softc* %0, %struct.iwm_softc** %2, align 8
  %3 = load i32, i32* @IWM_CSR_INT_BIT_RF_KILL, align 4
  %4 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %5 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %4, i32 0, i32 0
  store i32 %3, i32* %5, align 4
  %6 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %7 = load i32, i32* @IWM_CSR_INT_MASK, align 4
  %8 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %9 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @IWM_WRITE(%struct.iwm_softc* %6, i32 %7, i32 %10)
  %12 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %13 = load i32, i32* @IWM_CSR_GP_CNTRL, align 4
  %14 = load i32, i32* @IWM_CSR_GP_CNTRL_REG_FLAG_RFKILL_WAKE_L1A_EN, align 4
  %15 = call i32 @IWM_SETBITS(%struct.iwm_softc* %12, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @IWM_WRITE(%struct.iwm_softc*, i32, i32) #1

declare dso_local i32 @IWM_SETBITS(%struct.iwm_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
